# cont-postgresql

./: .gitignore  .gitmodules  .inst-list  Makefile  Makefile.am  NEWS  README.md  THANKS  cl-manifest  configure.ac  docker.yml  postgresql-container.service.in  postgresql-container.service.tpl  project.py
atomic/: install.sh  uninstall.sh
containers/: .gitignore  Makefile  README.md  pg-cont.yaml  prep.tpl  prep.yaml
examples/: postinit.sh
libexec/: .gitignore  Makefile.inc  exec.in  exec.tpl  initdb.in  initdb.tpl  preexec.in  preexec.tpl
m4/: _ax_text_tpl.m4
share/cont-docs/: Makefile.inc  help.txt.in  help.txt.tpl  postgresql.txt.tpl
share/cont-docs/postgresql/: HOME.txt.tpl  advanced.txt.tpl
share/cont-entry/: .gitignore  Makefile.inc  entry.in  entry.tpl
share/cont-postgresql/: Makefile.inc  cont-postgresql.sh.in  cont-postgresql.sh.tpl
